--- a/.gitignore
+++ b/.gitignore
@@ -1,16 +1,10 @@
-*.rbc
-*.sassc
-.sass-cache
-capybara-*.html
-.rspec
-/.bundle
-/vendor/bundle
-/log/*
-/tmp/*
-/db/*.sqlite3
-/public/system/*
-/coverage/
-/spec/tmp/*
-**.orig
-rerun.txt
-pickle-email-*.html
+
+.bundle
+db/*.sqlite3
+log/*.log
+tmp/
+
+config/database.yml
+*.swp
+Gemfile.lock
+
