--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
 
-.bundle
-db/*.sqlite3
-log/*.log
-tmp/
+/.bundle
+/db/*.sqlite3
+/log/*.log
+/tmp
 
-config/database.yml
-*.swp
+
 Gemfile.lock
+database.yml
+*.swp
 
